--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 La bibliothèque de demain,<br>
                 <span class="text-blue-400">chez vous.</span>
             </h1>
-            <p class="text-xl md:text-2xl text-gray-300 mb-10 max-w-2xl mx-auto font-light">
+            <p class="text-xl md:text-2xl text-gray-300 mb-10 max-w-[30rem] mx-auto font-light">
                 Gérez vos livres, gardez vos données, partagez avec vos voisins.<br>
                 <span class="text-sm font-bold uppercase tracking-widest text-blue-300 mt-4 block">Projet Open Source &
                     Citoyen</span>
@@ -63,22 +63,28 @@
     <section class="py-20 px-6 max-w-6xl mx-auto">
         <div class="grid md:grid-cols-3 gap-12 text-center">
             <div class="p-6 bg-white rounded-2xl shadow-sm hover:shadow-md transition">
-                <div class="text-5xl mb-4">📱</div>
+                <div class="mb-4 flex justify-center h-24 items-center">
+                    <span class="text-6xl">📱</span>
+                </div>
                 <h3 class="text-xl font-bold mb-3">Local-First</h3>
                 <p class="text-gray-600">Vos données sont stockées sur votre téléphone. Pas de cloud obligatoire, pas de
                     tracking. Vous êtes propriétaire de votre bibliothèque.</p>
             </div>
             <div class="p-6 bg-white rounded-2xl shadow-sm hover:shadow-md transition">
-                <div class="text-5xl mb-4">🤝</div>
+                <div class="mb-4 flex justify-center h-24 items-center">
+                    <span class="text-6xl">🤝</span>
+                </div>
                 <h3 class="text-xl font-bold mb-3">Partage P2P</h3>
                 <p class="text-gray-600">Prêtez vos livres à vos amis ou voisins de confiance. Créez un réseau de
                     lecture local et décentralisé.</p>
             </div>
             <div class="p-6 bg-white rounded-2xl shadow-sm hover:shadow-md transition">
-                <div class="text-5xl mb-4">🤖</div>
-                <h3 class="text-xl font-bold mb-3">IA Privée</h3>
-                <p class="text-gray-600">Une assistance intelligente pour classer et découvrir, sans envoyer vos données
-                    personnelles aux GAFAM.</p>
+                <div class="mb-4 flex justify-center h-24 items-center">
+                    <span class="text-6xl">🧙‍♂️</span>
+                </div>
+                <h3 class="text-xl font-bold mb-3">Assistant Bibliothécaire</h3>
+                <p class="text-gray-600">Une aide magique pour classer et découvrir vos livres, sans jamais envoyer vos
+                    données personnelles aux GAFAM.</p>
             </div>
         </div>
     </section>
@@ -88,7 +94,7 @@
         <div class="max-w-4xl mx-auto text-center">
             <h2 class="text-3xl font-bold mb-8 text-gray-900">Expérimentons ensemble</h2>
             <p class="text-lg text-gray-700 mb-10 leading-relaxed">
-                BiblioGenius n'est pas une startup, c'est un projet citoyen. <br>
+                BiblioGenius est un projet citoyen. <br>
                 Nous cherchons des bibliothèques, des associations et des voisins pour tester de nouveaux usages :
             </p>
             <div class="flex flex-wrap justify-center gap-4 mb-10">
@@ -96,7 +102,10 @@
                     lecture</span>
                 <span class="bg-white px-4 py-2 rounded-lg shadow-sm font-medium text-blue-800">🏘️ Boîtes à livres
                     connectées</span>
-                <span class="bg-white px-4 py-2 rounded-lg shadow-sm font-medium text-blue-800">🌱 Grainothèques</span>
+                <span class="bg-white px-4 py-2 rounded-lg shadow-sm font-medium text-blue-800">🏢 Bibliothèques
+                    associatives</span>
+                <span class="bg-white px-4 py-2 rounded-lg shadow-sm font-medium text-blue-800">🗂️ Centres de
+                    documentation</span>
             </div>
         </div>
     </section>
