content: replace eco claims with humble local-first messaging

--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
             <div class="features-grid">
                 <div class="feature-card">
                     <span class="feature-icon">📱</span>
-                    <h3 id="feature-local-title">Local-First & Éco-light</h3>
-                    <p id="feature-local-desc">Vos données restent sur votre téléphone. Pas de serveurs énergivores. Une
-                        tech (Rust) ultra-légère pour la planète.</p>
+                    <h3 id="feature-local-title">Local-First</h3>
+                    <p id="feature-local-desc">Vos données vous appartiennent. Fonctionne hors-ligne, sans cloud.</p>
                 </div>
                 <div class="feature-card">
                     <span class="feature-icon">🤝</span>
@@ -122,8 +121,8 @@
                 hero_subtitle: "Gérez vos livres, gardez vos données, partagez avec vos voisins.<br><span class=\"hero-tagline\">Projet Open Source & Citoyen</span>",
                 btn_github: "Voir le Code (GitHub)",
                 btn_tester: "Devenir Testeur",
-                feature_local_title: "Local-First & Éco-light",
-                feature_local_desc: "Vos données restent sur votre téléphone. Pas de serveurs énergivores. Une tech (Rust) ultra-légère pour la planète.",
+                feature_local_title: "Local-First",
+                feature_local_desc: "Vos données vous appartiennent. Fonctionne hors-ligne, sans cloud.",
                 feature_p2p_title: "Partage P2P",
                 feature_p2p_desc: "Prêtez vos livres à vos amis ou voisins de confiance. Créez un réseau de lecture local et décentralisé.",
                 feature_ai_title: "Assistant Bibliothécaire",
@@ -147,8 +146,8 @@
                 hero_subtitle: "Manage your books, keep your data, share with neighbors.<br><span class=\"hero-tagline\">Open Source & Civic Project</span>",
                 btn_github: "View Code (GitHub)",
                 btn_tester: "Become a Tester",
-                feature_local_title: "Local-First & Eco-light",
-                feature_local_desc: "Your data stays on your phone. No energy-hungry servers. Ultra-lightweight (Rust) tech for the planet.",
+                feature_local_title: "Local-First",
+                feature_local_desc: "Your data belongs to you. Works offline, no cloud required.",
                 feature_p2p_title: "P2P Sharing",
                 feature_p2p_desc: "Lend your books to trusted friends or neighbors. Create a local and decentralized reading network.",
                 feature_ai_title: "Librarian Assistant",
@@ -172,8 +171,8 @@
                 hero_subtitle: "Gestiona tus libros, guarda tus datos, comparte con vecinos.<br><span class=\"hero-tagline\">Proyecto Open Source & Ciudadano</span>",
                 btn_github: "Ver Código (GitHub)",
                 btn_tester: "Ser Tester",
-                feature_local_title: "Local-First & Eco-light",
-                feature_local_desc: "Tus datos se quedan en tu teléfono. Sin servidores que consumen energía. Tecnología (Rust) ultraligera para el planeta.",
+                feature_local_title: "Local-First",
+                feature_local_desc: "Tus datos te pertenecen. Funciona sin conexión, sin nube.",
                 feature_p2p_title: "Intercambio P2P",
                 feature_p2p_desc: "Presta tus libros a amigos o vecinos de confianza. Crea una red de lectura local y descentralizada.",
                 feature_ai_title: "Asistente Bibliotecario",
@@ -197,8 +196,8 @@
                 hero_subtitle: "Verwalten Sie Ihre Bücher, behalten Sie Ihre Daten, teilen Sie mit Nachbarn.<br><span class=\"hero-tagline\">Open Source & Bürgerprojekt</span>",
                 btn_github: "Code ansehen (GitHub)",
                 btn_tester: "Tester werden",
-                feature_local_title: "Local-First & Öko-light",
-                feature_local_desc: "Ihre Daten bleiben auf Ihrem Telefon. Keine energiehungrigen Server. Ultraleichte (Rust) Technologie für den Planeten.",
+                feature_local_title: "Local-First",
+                feature_local_desc: "Ihre Daten gehören Ihnen. Funktioniert offline, ohne Cloud.",
                 feature_p2p_title: "P2P-Teilen",
                 feature_p2p_desc: "Verleihen Sie Ihre Bücher an vertrauenswürdige Freunde oder Nachbarn. Erstellen Sie ein lokales und dezentrales Lesenetzwerk.",
                 feature_ai_title: "Bibliotheksassistent",
