feat: landing page update (Souveraineté Numérique & MCP)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </h1>
             <p id="hero-subtitle">
                 Gérez vos livres, gardez vos données, partagez avec vos voisins.<br>
-                <span class="hero-tagline">Projet Open Source & Citoyen</span>
+                <span class="hero-tagline">Souveraineté Numérique & Open Source</span>
             </p>
             <div class="hero-buttons">
                 <a href="https://github.com/bibliogenius/bibliogenius-app" class="btn btn-primary">
@@ -68,9 +68,9 @@
                 </div>
                 <div class="feature-card">
                     <span class="feature-icon">🧙‍♂️</span>
-                    <h3 id="feature-ai-title">Assistant Bibliothécaire</h3>
-                    <p id="feature-ai-desc">Une aide magique pour classer et découvrir vos livres, en gardant le
-                        contrôle sur vos données personnelles.</p>
+                    <h3 id="feature-ai-title">Intelligence Locale (MCP)</h3>
+                    <p id="feature-ai-desc">Connectez vos agents IA locaux (Claude, Ollama) à votre bibliothèque via le
+                        protocole ouvert MCP.</p>
                 </div>
                 <div class="feature-card">
                     <span class="feature-icon">🧩</span>
@@ -118,15 +118,15 @@
             fr: {
                 title: "BiblioGenius - La bibliothèque de demain, chez vous.",
                 hero_title: "La bibliothèque de demain,<br><span>chez vous.</span>",
-                hero_subtitle: "Gérez vos livres, gardez vos données, partagez avec vos voisins.<br><span class=\"hero-tagline\">Projet Open Source & Citoyen</span>",
+                hero_subtitle: "Gérez vos livres, gardez vos données, partagez avec vos voisins.<br><span class=\"hero-tagline\">Souveraineté Numérique & Open Source</span>",
                 btn_github: "Voir le Code (GitHub)",
                 btn_tester: "Devenir Testeur",
                 feature_local_title: "Local-First",
                 feature_local_desc: "Vos données vous appartiennent. Fonctionne hors-ligne, sans cloud.",
                 feature_p2p_title: "Partage P2P",
                 feature_p2p_desc: "Prêtez vos livres à vos amis ou voisins de confiance. Créez un réseau de lecture local et décentralisé.",
-                feature_ai_title: "Assistant Bibliothécaire",
-                feature_ai_desc: "Une aide magique pour classer et découvrir vos livres, en gardant le contrôle sur vos données personnelles.",
+                feature_ai_title: "Intelligence Locale (MCP)",
+                feature_ai_desc: "Connectez vos agents IA locaux (Claude, Ollama) à votre bibliothèque via le protocole ouvert MCP.",
                 feature_modular_title: "Modulaire",
                 feature_modular_desc: "Une application qui s'adapte à votre usage : lecteur, famille, association ou enseignant.",
                 exp_title: "Expérimentons ensemble",
@@ -143,15 +143,15 @@
             en: {
                 title: "BiblioGenius - The library of tomorrow, at home.",
                 hero_title: "The library of tomorrow,<br><span>at home.</span>",
-                hero_subtitle: "Manage your books, keep your data, share with neighbors.<br><span class=\"hero-tagline\">Open Source & Civic Project</span>",
+                hero_subtitle: "Manage your books, keep your data, share with neighbors.<br><span class=\"hero-tagline\">Digital Sovereignty & Open Source</span>",
                 btn_github: "View Code (GitHub)",
                 btn_tester: "Become a Tester",
                 feature_local_title: "Local-First",
                 feature_local_desc: "Your data belongs to you. Works offline, no cloud required.",
                 feature_p2p_title: "P2P Sharing",
                 feature_p2p_desc: "Lend your books to trusted friends or neighbors. Create a local and decentralized reading network.",
-                feature_ai_title: "Librarian Assistant",
-                feature_ai_desc: "Magical help to classify and discover your books, while keeping control over your personal data.",
+                feature_ai_title: "Local Intelligence (MCP)",
+                feature_ai_desc: "Connect your local AI agents (Claude, Ollama) to your library via the open MCP protocol.",
                 feature_modular_title: "Modular",
                 feature_modular_desc: "An app that adapts to your needs: reader, family, association, or teacher.",
                 exp_title: "Let's experiment together",
@@ -168,15 +168,15 @@
             es: {
                 title: "BiblioGenius - La biblioteca del mañana, en casa.",
                 hero_title: "La biblioteca del mañana,<br><span>en casa.</span>",
-                hero_subtitle: "Gestiona tus libros, guarda tus datos, comparte con vecinos.<br><span class=\"hero-tagline\">Proyecto Open Source & Ciudadano</span>",
+                hero_subtitle: "Gestiona tus libros, guarda tus datos, comparte con vecinos.<br><span class=\"hero-tagline\">Soberanía Digital y Open Source</span>",
                 btn_github: "Ver Código (GitHub)",
                 btn_tester: "Ser Tester",
                 feature_local_title: "Local-First",
                 feature_local_desc: "Tus datos te pertenecen. Funciona sin conexión, sin nube.",
                 feature_p2p_title: "Intercambio P2P",
                 feature_p2p_desc: "Presta tus libros a amigos o vecinos de confianza. Crea una red de lectura local y descentralizada.",
-                feature_ai_title: "Asistente Bibliotecario",
-                feature_ai_desc: "Ayuda mágica para clasificar y descubrir tus libros, manteniendo el control sobre tus datos personales.",
+                feature_ai_title: "Inteligencia Local (MCP)",
+                feature_ai_desc: "Conecta tus agentes de IA locales (Claude, Ollama) a tu biblioteca vía el protocolo abierto MCP.",
                 feature_modular_title: "Modular",
                 feature_modular_desc: "Una aplicación que se adapta a tu uso: lector, familia, asociación o profesor.",
                 exp_title: "Experimentemos juntos",
@@ -193,15 +193,15 @@
             de: {
                 title: "BiblioGenius - Die Bibliothek von morgen, zu Hause.",
                 hero_title: "Die Bibliothek von morgen,<br><span>zu Hause.</span>",
-                hero_subtitle: "Verwalten Sie Ihre Bücher, behalten Sie Ihre Daten, teilen Sie mit Nachbarn.<br><span class=\"hero-tagline\">Open Source & Bürgerprojekt</span>",
+                hero_subtitle: "Verwalten Sie Ihre Bücher, behalten Sie Ihre Daten, teilen Sie mit Nachbarn.<br><span class=\"hero-tagline\">Digitale Souveränität & Open Source</span>",
                 btn_github: "Code ansehen (GitHub)",
                 btn_tester: "Tester werden",
                 feature_local_title: "Local-First",
                 feature_local_desc: "Ihre Daten gehören Ihnen. Funktioniert offline, ohne Cloud.",
                 feature_p2p_title: "P2P-Teilen",
                 feature_p2p_desc: "Verleihen Sie Ihre Bücher an vertrauenswürdige Freunde oder Nachbarn. Erstellen Sie ein lokales und dezentrales Lesenetzwerk.",
-                feature_ai_title: "Bibliotheksassistent",
-                feature_ai_desc: "Magische Hilfe zum Klassifizieren und Entdecken Ihrer Bücher, während Sie die Kontrolle über Ihre persönlichen Daten behalten.",
+                feature_ai_title: "Lokale Intelligenz (MCP)",
+                feature_ai_desc: "Verbinden Sie Ihre lokalen KI-Agenten (Claude, Ollama) über das offene MCP-Protokoll mit Ihrer Bibliothek.",
                 feature_modular_title: "Modular",
                 feature_modular_desc: "Eine App, die sich an Ihre Bedürfnisse anpasst: Leser, Familie, Verein oder Lehrer.",
                 exp_title: "Lassen Sie uns gemeinsam experimentieren",
